--- a/note/spring_test/nsl-kdd-test.ipynb
+++ b/note/spring_test/nsl-kdd-test.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,28 +38,41 @@
     "\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "\n",
+    "import NslKdd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "duration protocol_type      service     flag  src_bytes  dst_bytes  \\\n0           0.0        b'tcp'   b'private'   b'REJ'        0.0        0.0   \n1           0.0        b'tcp'   b'private'   b'REJ'        0.0        0.0   \n2           2.0        b'tcp'  b'ftp_data'    b'SF'    12983.0        0.0   \n3           0.0       b'icmp'     b'eco_i'    b'SF'       20.0        0.0   \n4           1.0        b'tcp'    b'telnet'  b'RSTO'        0.0       15.0   \n...         ...           ...          ...      ...        ...        ...   \n22539       0.0        b'tcp'      b'smtp'    b'SF'      794.0      333.0   \n22540       0.0        b'tcp'      b'http'    b'SF'      317.0      938.0   \n22541       0.0        b'tcp'      b'http'    b'SF'    54540.0     8314.0   \n22542       0.0        b'udp'  b'domain_u'    b'SF'       42.0       42.0   \n22543       0.0        b'tcp'    b'sunrpc'   b'REJ'        0.0        0.0   \n\n       land  wrong_fragment  urgent  hot  ...  dst_host_srv_count  \\\n0      b'0'             0.0     0.0  0.0  ...                10.0   \n1      b'0'             0.0     0.0  0.0  ...                 1.0   \n2      b'0'             0.0     0.0  0.0  ...                86.0   \n3      b'0'             0.0     0.0  0.0  ...                57.0   \n4      b'0'             0.0     0.0  0.0  ...                86.0   \n...     ...             ...     ...  ...  ...                 ...   \n22539  b'0'             0.0     0.0  0.0  ...               141.0   \n22540  b'0'             0.0     0.0  0.0  ...               255.0   \n22541  b'0'             0.0     0.0  2.0  ...               255.0   \n22542  b'0'             0.0     0.0  0.0  ...               252.0   \n22543  b'0'             0.0     0.0  0.0  ...                21.0   \n\n      dst_host_same_srv_rate  dst_host_diff_srv_rate  \\\n0                       0.04                    0.06   \n1                       0.00                    0.06   \n2                       0.61                    0.04   \n3                       1.00                    0.00   \n4                       0.31                    0.17   \n...                      ...                     ...   \n22539                   0.72                    0.06   \n22540                   1.00                    0.00   \n22541                   1.00                    0.00   \n22542                   0.99                    0.01   \n22543                   0.08                    0.03   \n\n       dst_host_same_src_port_rate  dst_host_srv_diff_host_rate  \\\n0                             0.00                         0.00   \n1                             0.00                         0.00   \n2                             0.61                         0.02   \n3                             1.00                         0.28   \n4                             0.03                         0.02   \n...                            ...                          ...   \n22539                         0.01                         0.01   \n22540                         0.01                         0.01   \n22541                         0.00                         0.00   \n22542                         0.00                         0.00   \n22543                         0.00                         0.00   \n\n       dst_host_serror_rate  dst_host_srv_serror_rate  dst_host_rerror_rate  \\\n0                      0.00                       0.0                  1.00   \n1                      0.00                       0.0                  1.00   \n2                      0.00                       0.0                  0.00   \n3                      0.00                       0.0                  0.00   \n4                      0.00                       0.0                  0.83   \n...                     ...                       ...                   ...   \n22539                  0.01                       0.0                  0.00   \n22540                  0.01                       0.0                  0.00   \n22541                  0.00                       0.0                  0.07   \n22542                  0.00                       0.0                  0.00   \n22543                  0.00                       0.0                  0.44   \n\n       dst_host_srv_rerror_rate       class  \n0                          1.00  b'anomaly'  \n1                          1.00  b'anomaly'  \n2                          0.00   b'normal'  \n3                          0.00  b'anomaly'  \n4                          0.71  b'anomaly'  \n...                         ...         ...  \n22539                      0.00   b'normal'  \n22540                      0.00   b'normal'  \n22541                      0.07  b'anomaly'  \n22542                      0.00   b'normal'  \n22543                      1.00  b'anomaly'  \n\n[22544 rows x 42 columns]\n"
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-bdc466f5f0b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrainset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNslKdd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"KDDTrain+\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtestset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNslKdd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"KDDTest+\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
     }
    ],
    "source": [
-    "from scipy.io import arff\n",
-    "import numpy\n",
-    "import pandas as pd\n",
+    "transforms=None\n",
     "\n",
-    "data = arff.loadarff('../../data/nsl-kdd/KDDTest+.arff.txt')\n",
-    "df = pd.DataFrame(data[0])\n",
-    "print(df)"
+    "#dataset\n",
+    "trainset=NslKddset(\"../../data\",\"KDDTrain+\")\n",
+    "testset=NslKddset(\"../../data\",\"KDDTest+\")\n",
+    "\n",
+    "#dataloaders\n",
+    "trainloader=torch.utils.data.DataLoader(trainset,batch_size=10,shuffle=True)\n",
+    "testloader=torch.utils.data.DataLoader(testset,batch_size=10)\n",
+    "\n",
+    "#constant for classes\n",
+    "classes=('normaly','anamaly')"
    ]
   },
   {
@@ -67,7 +80,131 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net,self).__init__()\n",
+    "        self.fc1=nn.Linear(41,41*41)\n",
+    "        self.fc2=nn.Linear(41*41,666)\n",
+    "        self.fc3=nn.Linear(666,13)\n",
+    "        self.fc4=nn.Linear(13,2)\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "        x=F.relu(self.fc1(x))\n",
+    "        x=F.relu(self.fc2(x))\n",
+    "        x=F.relu(self.fc3(x))\n",
+    "        x=self.fc4(x)\n",
+    "        return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = Net()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.90)\n",
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, 1000,gamma=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "running_loss = 0.0\n",
+    "for epoch in range(1):  # loop over the dataset multiple times\n",
+    "\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "\n",
+    "        # get the inputs; data is a list of [inputs, labels]\n",
+    "        inputs, labels = data\n",
+    "\n",
+    "        # zero the parameter gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # forward + backward + optimize\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "        if i % 1000 == 999:    # every 1000 mini-batches...\n",
+    "            scheduler.step()\n",
+    "            print(\"[%d,%6d] ava_loss: %.5f\"%(epoch+1,i+1,running_loss/1000))\n",
+    "            running_loss = 0.0\n",
+    "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH=\"../../pth/nsl_kdd_test.pth\"\n",
+    "torch.save(net.state_dict(),PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = Net()\n",
+    "net.load_state_dict(torch.load(PATH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for data in testloader:\n",
+    "        cvdata, labels = data\n",
+    "        outputs = net(cvdata)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "print('Accuracy of the network: %d %%' % (\n",
+    "    100 * correct / total))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_correct = list(0. for i in range(2))\n",
+    "class_total = list(0. for i in range(2))\n",
+    "with torch.no_grad():\n",
+    "    for data in testloader:\n",
+    "        cvdata, labels = data\n",
+    "        outputs = net(cvdata)\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        c = (predicted == labels).squeeze()\n",
+    "        for i in range(10):\n",
+    "            label = labels[i]\n",
+    "            class_correct[label] += c[i].item()\n",
+    "            class_total[label] += 1\n",
+    "\n",
+    "\n",
+    "for i in range(2):\n",
+    "    print('Accuracy of %5s : %2d %%' % (\n",
+    "        classes[i], 100 * class_correct[i] / class_total[i]))"
+   ]
   }
  ]
 }
