--- a/note/spring_test/nslkdd_cnn_test.ipynb
+++ b/note/spring_test/nslkdd_cnn_test.ipynb
@@ -30,8 +30,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
+    "#import torchvision\n",
+    "#import torchvision.transforms as transforms\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -40,32 +40,20 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
-    "import NslKdd"
+    "import NslKdd as kdd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-bdc466f5f0b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrainset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNslKdd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"KDDTrain+\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtestset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNslKdd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"KDDTest+\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "transforms=None\n",
+    "transform=torch.FloatTensor\n",
     "\n",
     "#dataset\n",
-    "trainset=NslKddset(\"../../data\",\"KDDTrain+\")\n",
-    "testset=NslKddset(\"../../data\",\"KDDTest+\")\n",
+    "trainset=kdd.NslKddset(\"../../data\",\"KDDTrain+\",train=True,transform=transform)\n",
+    "testset=kdd.NslKddset(\"../../data\",\"KDDTest+\",train=False,transform=transform)\n",
     "\n",
     "#dataloaders\n",
     "trainloader=torch.utils.data.DataLoader(trainset,batch_size=10,shuffle=True)\n",
@@ -77,44 +65,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net,self).__init__()\n",
-    "        self.fc1=nn.Linear(41,41*41)\n",
-    "        self.fc2=nn.Linear(41*41,666)\n",
-    "        self.fc3=nn.Linear(666,13)\n",
-    "        self.fc4=nn.Linear(13,2)\n",
+    "        self.conv1=nn.Conv1d(1,10,2)\n",
+    "        self.maxpool=nn.MaxPool1d(2,stride=2)\n",
+    "        self.avgpool=nn.AvgPool1d(2,stride=2)\n",
+    "        self.conv2=nn.Conv1d(10,20,2)\n",
+    "        self.fc1=nn.Linear(9*20,80)\n",
+    "        self.fc2=nn.Linear(80,16)\n",
+    "        self.fc3=nn.Linear(16,2)\n",
     "\n",
     "    def forward(self,x):\n",
+    "        x=F.relu(self.avgpool(self.conv1(x)))\n",
+    "        x=F.relu(self.maxpool(self.conv2(x)))\n",
+    "        x=x.view(-1,9*20)\n",
     "        x=F.relu(self.fc1(x))\n",
     "        x=F.relu(self.fc2(x))\n",
-    "        x=F.relu(self.fc3(x))\n",
-    "        x=self.fc4(x)\n",
+    "        x=self.fc3(x)\n",
     "        return x\n",
-    "        "
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "net = Net()\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.90)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, 1000,gamma=0.9)"
+    "criterion = nn.L1Loss()\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, 3,gamma=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1,  1000] ava_loss: 4.92340\n[1,  2000] ava_loss: 0.09650\n[1,  3000] ava_loss: 0.08542\n[1,  4000] ava_loss: 0.06792\n[1,  5000] ava_loss: 0.06454\n[1,  6000] ava_loss: 0.05903\n[1,  7000] ava_loss: 0.05768\n[1,  8000] ava_loss: 0.05822\n[1,  9000] ava_loss: 0.05749\n[1, 10000] ava_loss: 0.05795\n[1, 11000] ava_loss: 0.05684\n[1, 12000] ava_loss: 0.05675\nFinished Training\n"
+    }
+   ],
    "source": [
     "running_loss = 0.0\n",
     "for epoch in range(1):  # loop over the dataset multiple times\n",
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<All keys matched successfully>"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
    "source": [
     "net = Net()\n",
     "net.load_state_dict(torch.load(PATH))"
@@ -163,9 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "correct:16895  total:22544\nAccuracy of the network: 74 %\n"
+    }
+   ],
    "source": [
     "correct = 0\n",
     "total = 0\n",
@@ -177,15 +191,22 @@
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
+    "print(\"correct:%d  total:%d\" %(correct,total))\n",
     "print('Accuracy of the network: %d %%' % (\n",
     "    100 * correct / total))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "correct:9431  total:9711\nAccuracy of normaly : 97.116672 %\ncorrect:7464  total:12833\nAccuracy of anamaly : 58.162550 %\n"
+    }
+   ],
    "source": [
     "class_correct = list(0. for i in range(2))\n",
     "class_total = list(0. for i in range(2))\n",
@@ -195,16 +216,24 @@
     "        outputs = net(cvdata)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
     "        c = (predicted == labels).squeeze()\n",
-    "        for i in range(10):\n",
+    "       \n",
+    "        for i in range(len(labels)):\n",
     "            label = labels[i]\n",
-    "            class_correct[label] += c[i].item()\n",
-    "            class_total[label] += 1\n",
-    "\n",
+    "            class_correct[int(label)] += c[i].item()\n",
+    "            class_total[int(label)] += 1\n",
     "\n",
     "for i in range(2):\n",
-    "    print('Accuracy of %5s : %2d %%' % (\n",
+    "    print(\"correct:%d  total:%d\" %(class_correct[i],class_total[i]))\n",
+    "    print('Accuracy of %5s : %2f %%' % (\n",
     "        classes[i], 100 * class_correct[i] / class_total[i]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
