--- a/note/spring_test/fasion_mnist_test.ipynb
+++ b/note/spring_test/fasion_mnist_test.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +72,13 @@
     "\n",
     "# constant for classes\n",
     "classes = ('T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
-    "        'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle Boot')\n"
+    "        'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle Boot')\n",
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,26 +99,33 @@
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
     "        x = self.fc3(x)\n",
-    "        return x\n"
+    "        return x\n",
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "net = Net()\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.90)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, 1000,gamma=0.9)"
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, 10,gamma=0.9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1,  1000] ava_loss: 1.55356\n[1,  2000] ava_loss: 0.86134\n[1,  3000] ava_loss: 0.72301\n[1,  4000] ava_loss: 0.66505\n[1,  5000] ava_loss: 0.59739\n[1,  6000] ava_loss: 0.55599\n[1,  7000] ava_loss: 0.52437\n[1,  8000] ava_loss: 0.52664\n[1,  9000] ava_loss: 0.49417\n[1, 10000] ava_loss: 0.48788\n[1, 11000] ava_loss: 0.45256\n[1, 12000] ava_loss: 0.47749\n[1, 13000] ava_loss: 0.40922\n[1, 14000] ava_loss: 0.43439\n[1, 15000] ava_loss: 0.41284\n[2,  1000] ava_loss: 0.39666\n[2,  2000] ava_loss: 0.38250\n[2,  3000] ava_loss: 0.38926\n[2,  4000] ava_loss: 0.38581\n[2,  5000] ava_loss: 0.35643\n[2,  6000] ava_loss: 0.40680\n[2,  7000] ava_loss: 0.38232\n[2,  8000] ava_loss: 0.37329\n[2,  9000] ava_loss: 0.34165\n[2, 10000] ava_loss: 0.35603\n[2, 11000] ava_loss: 0.36179\n[2, 12000] ava_loss: 0.35335\n[2, 13000] ava_loss: 0.36303\n[2, 14000] ava_loss: 0.36780\n[2, 15000] ava_loss: 0.35894\n[3,  1000] ava_loss: 0.35339\n[3,  2000] ava_loss: 0.33343\n[3,  3000] ava_loss: 0.32549\n[3,  4000] ava_loss: 0.32766\n[3,  5000] ava_loss: 0.31071\n[3,  6000] ava_loss: 0.33189\n[3,  7000] ava_loss: 0.32282\n[3,  8000] ava_loss: 0.32307\n[3,  9000] ava_loss: 0.31196\n[3, 10000] ava_loss: 0.33428\n[3, 11000] ava_loss: 0.32242\n[3, 12000] ava_loss: 0.31323\n[3, 13000] ava_loss: 0.30895\n[3, 14000] ava_loss: 0.30975\n[3, 15000] ava_loss: 0.30984\nFinished Training\n"
+    }
+   ],
    "source": [
     "running_loss = 0.0\n",
     "for epoch in range(3):  # loop over the dataset multiple times\n",
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<All keys matched successfully>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "net = Net()\n",
     "net.load_state_dict(torch.load(PATH))"
@@ -166,9 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Accuracy of the network: 87 %\n"
+    }
+   ],
    "source": [
     "correct = 0\n",
     "total = 0\n",
@@ -186,9 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Accuracy of T-shirt/top : 87 %\nAccuracy of Trouser : 96 %\nAccuracy of Pullover : 84 %\nAccuracy of Dress : 90 %\nAccuracy of  Coat : 79 %\nAccuracy of Sandal : 92 %\nAccuracy of Shirt : 57 %\nAccuracy of Sneaker : 98 %\nAccuracy of   Bag : 97 %\nAccuracy of Ankle Boot : 90 %\n"
+    }
+   ],
    "source": [
     "class_correct = list(0. for i in range(10))\n",
     "class_total = list(0. for i in range(10))\n",
@@ -208,6 +237,13 @@
     "    print('Accuracy of %5s : %2d %%' % (\n",
     "        classes[i], 100 * class_correct[i] / class_total[i]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
