--- a/note/spring_test/nslkdd_cnn_test.ipynb
+++ b/note/spring_test/nslkdd_cnn_test.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,84 +40,113 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
-    "import NslKdd as kdd"
+    "import KddModel as kdd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "batch_size=100\n",
+    "root='../../data/kdd/'\n",
     "transform=torch.FloatTensor\n",
     "\n",
     "#dataset\n",
-    "trainset=kdd.NslKddset(\"../../data\",\"KDDTrain+\",train=True,transform=transform)\n",
-    "testset=kdd.NslKddset(\"../../data\",\"KDDTest+\",train=False,transform=transform)\n",
+    "trainset=kdd.Kddset(\"KDDTrain+.txt\",train=True,transform=transform)\n",
+    "testset=kdd.Kddset(\"KDDTest+.txt\",train=False,transform=transform)\n",
     "\n",
     "#dataloaders\n",
-    "trainloader=torch.utils.data.DataLoader(trainset,batch_size=10,shuffle=True)\n",
-    "testloader=torch.utils.data.DataLoader(testset,batch_size=10)\n",
+    "trainloader=torch.utils.data.DataLoader(trainset,batch_size=batch_size,shuffle=True)\n",
+    "testloader=torch.utils.data.DataLoader(testset,batch_size=batch_size)\n",
     "\n",
     "#constant for classes\n",
-    "classes=('normaly','anamaly')"
+    "classes=('normaly','anormal')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CNN\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net,self).__init__()\n",
-    "        self.conv1=nn.Conv1d(1,10,2)\n",
-    "        self.maxpool=nn.MaxPool1d(2,stride=2)\n",
-    "        self.avgpool=nn.AvgPool1d(2,stride=2)\n",
-    "        self.conv2=nn.Conv1d(10,20,2)\n",
-    "        self.fc1=nn.Linear(9*20,80)\n",
-    "        self.fc2=nn.Linear(80,16)\n",
-    "        self.fc3=nn.Linear(16,2)\n",
+    "        self.convmodel=nn.Sequential(nn.Conv2d(1,6,3,padding=2),\n",
+    "                                    nn.BatchNorm2d(6),\n",
+    "                                    nn.Sigmoid(),\n",
+    "                                    nn.Conv2d(6,16,3),\n",
+    "                                    nn.BatchNorm2d(16),\n",
+    "                                    nn.Sigmoid(),\n",
+    "                                    )\n",
+    "        self.fcmodel=nn.Sequential(nn.Linear(16*7*7,200),\n",
+    "                                    nn.BatchNorm1d(200),\n",
+    "                                    nn.Sigmoid(),\n",
+    "                                    nn.Linear(200,20),\n",
+    "                                    nn.Sigmoid(),\n",
+    "                                    nn.Linear(20,2)\n",
+    "                                    )\n",
     "\n",
-    "    def forward(self,x):\n",
-    "        x=F.relu(self.avgpool(self.conv1(x)))\n",
-    "        x=F.relu(self.maxpool(self.conv2(x)))\n",
-    "        x=x.view(-1,9*20)\n",
-    "        x=F.relu(self.fc1(x))\n",
-    "        x=F.relu(self.fc2(x))\n",
-    "        x=self.fc3(x)\n",
-    "        return x\n",
+    "    def forward(self,out):\n",
+    "        out=self.convmodel(out)\n",
+    "        out=out.view(-1,16*7*7)\n",
+    "        out=self.fcmodel(out)\n",
+    "        return out\n",
     ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = Net()\n",
-    "criterion = nn.L1Loss()\n",
-    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, 3,gamma=0.1)"
+    "def accuracy(net,testloader):\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for data in testloader:\n",
+    "            cvdata, labels = data\n",
+    "            outputs = net(cvdata)\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            predicted[predicted>0]=1.\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "    #print(\"correct:%d  total:%d\" %(correct,total))\n",
+    "    print('Accuracy: %d %%' % (100 * correct / total))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = Net()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(net.parameters(), lr=1e-2)\n",
+    "#scheduler = optim.lr_scheduler.StepLR(optimizer, 6,gamma=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[1,  1000] ava_loss: 4.92340\n[1,  2000] ava_loss: 0.09650\n[1,  3000] ava_loss: 0.08542\n[1,  4000] ava_loss: 0.06792\n[1,  5000] ava_loss: 0.06454\n[1,  6000] ava_loss: 0.05903\n[1,  7000] ava_loss: 0.05768\n[1,  8000] ava_loss: 0.05822\n[1,  9000] ava_loss: 0.05749\n[1, 10000] ava_loss: 0.05795\n[1, 11000] ava_loss: 0.05684\n[1, 12000] ava_loss: 0.05675\nFinished Training\n"
+     "text": "[1,   200] ava_loss: 0.25556\n[1,   400] ava_loss: 0.14957\n[1,   600] ava_loss: 0.13247\n[1,   800] ava_loss: 0.09738\n[1,  1000] ava_loss: 0.09551\n[1,  1200] ava_loss: 0.08646\nAccuracy: 77 %\n[2,   200] ava_loss: 0.10152\n[2,   400] ava_loss: 0.08627\n[2,   600] ava_loss: 0.05362\n[2,   800] ava_loss: 0.05430\n[2,  1000] ava_loss: 0.07013\n[2,  1200] ava_loss: 0.06109\nAccuracy: 78 %\n[3,   200] ava_loss: 0.06241\n[3,   400] ava_loss: 0.04467\n[3,   600] ava_loss: 0.04927\n[3,   800] ava_loss: 0.03949\n[3,  1000] ava_loss: 0.04580\n[3,  1200] ava_loss: 0.04348\nAccuracy: 81 %\n[4,   200] ava_loss: 0.05800\n[4,   400] ava_loss: 0.03959\n[4,   600] ava_loss: 0.03232\n[4,   800] ava_loss: 0.02916\n[4,  1000] ava_loss: 0.03384\n[4,  1200] ava_loss: 0.03019\nAccuracy: 81 %\nFinished Training\n"
     }
    ],
    "source": [
     "running_loss = 0.0\n",
-    "for epoch in range(1):  # loop over the dataset multiple times\n",
-    "\n",
+    "mini_batches_count=200\n",
+    "for epoch in range(4):  # loop over the dataset multiple times\n",
     "    for i, data in enumerate(trainloader, 0):\n",
     "\n",
     "        # get the inputs; data is a list of [inputs, labels]\n",
@@ -128,21 +157,26 @@
     "\n",
     "        # forward + backward + optimize\n",
     "        outputs = net(inputs)\n",
+    "        # whatur(labels)\n",
+    "        # break\n",
     "        loss = criterion(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        running_loss += loss.item()\n",
-    "        if i % 1000 == 999:    # every 1000 mini-batches...\n",
-    "            scheduler.step()\n",
-    "            print(\"[%d,%6d] ava_loss: %.5f\"%(epoch+1,i+1,running_loss/1000))\n",
+    "        # every 1000 mini-batches...\n",
+    "        if i % mini_batches_count == (mini_batches_count-1):    \n",
+    "            #scheduler.step()\n",
+    "            print(\"[%d,%6d] ava_loss: %.5f\"%(epoch+1,i+1,running_loss/mini_batches_count))    \n",
     "            running_loss = 0.0\n",
+    "\n",
+    "    accuracy(net,testloader)\n",
     "print('Finished Training')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +195,7 @@
       "text/plain": "<All keys matched successfully>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 26
     }
    ],
    "source": [
@@ -171,61 +205,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "correct:16895  total:22544\nAccuracy of the network: 74 %\n"
+     "text": "total:9711,correct:9408\nAccuracy: 96.8798 %\ntotal:12833,correct:8992\nAccuracy: 70.0694 %\n"
     }
    ],
    "source": [
-    "correct = 0\n",
-    "total = 0\n",
+    "class_correct = list(0 for i in range(2))\n",
+    "class_total = list(0 for i in range(2))\n",
     "with torch.no_grad():\n",
     "    for data in testloader:\n",
-    "        cvdata, labels = data\n",
-    "        outputs = net(cvdata)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
-    "\n",
-    "print(\"correct:%d  total:%d\" %(correct,total))\n",
-    "print('Accuracy of the network: %d %%' % (\n",
-    "    100 * correct / total))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "correct:9431  total:9711\nAccuracy of normaly : 97.116672 %\ncorrect:7464  total:12833\nAccuracy of anamaly : 58.162550 %\n"
-    }
-   ],
-   "source": [
-    "class_correct = list(0. for i in range(2))\n",
-    "class_total = list(0. for i in range(2))\n",
-    "with torch.no_grad():\n",
-    "    for data in testloader:\n",
-    "        cvdata, labels = data\n",
-    "        outputs = net(cvdata)\n",
+    "        images, labels = data\n",
+    "        outputs = net(images)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
+    "        predicted[predicted>0]=1\n",
     "        c = (predicted == labels).squeeze()\n",
-    "       \n",
     "        for i in range(len(labels)):\n",
     "            label = labels[i]\n",
-    "            class_correct[int(label)] += c[i].item()\n",
-    "            class_total[int(label)] += 1\n",
+    "            class_correct[label] += c[i].item()\n",
+    "            class_total[label] += 1\n",
+    "\n",
     "\n",
     "for i in range(2):\n",
-    "    print(\"correct:%d  total:%d\" %(class_correct[i],class_total[i]))\n",
-    "    print('Accuracy of %5s : %2f %%' % (\n",
-    "        classes[i], 100 * class_correct[i] / class_total[i]))"
+    "    print('total:%d,correct:%d' %(class_total[i],class_correct[i]))\n",
+    "    print('Accuracy: %.4f %%' % (100 * class_correct[i] / class_total[i]))"
    ]
   },
   {
