--- a/note/spring_test/kdd99_cnn.ipynb
+++ b/note/spring_test/kdd99_cnn.ipynb
@@ -25,13 +25,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "#import torchvision\n",
-    "#import torchvision.transforms as transforms\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -40,34 +38,28 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
-    "import KddModel as kdd"
+    "import Model as kdd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size=100\n",
-    "root='../../data/kdd/'\n",
-    "transform=torch.FloatTensor\n",
-    "\n",
-    "#dataset\n",
-    "trainset=kdd.Kddset(\"KDDTrain+.txt\",train=True,transform=transform)\n",
-    "testset=kdd.Kddset(\"KDDTest+.txt\",train=False,transform=transform)\n",
-    "\n",
+    "batch_size=400\n",
+    "datamodel=kdd.kdd99Data(batch_size)\n",
     "#dataloaders\n",
-    "trainloader=torch.utils.data.DataLoader(trainset,batch_size=batch_size,shuffle=True)\n",
-    "testloader=torch.utils.data.DataLoader(testset,batch_size=batch_size)\n",
+    "trainloader=datamodel.train_dataloader\n",
+    "testloader=datamodel.test_dataloader\n",
     "\n",
     "#constant for classes\n",
-    "classes=('normaly','anormal')"
+    "classes=tuple([i for i in range(23)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +74,19 @@
     "                                    nn.BatchNorm2d(16),\n",
     "                                    nn.Sigmoid(),\n",
     "                                    )\n",
-    "        self.fcmodel=nn.Sequential(nn.Linear(16*7*7,200),\n",
+    "        self.fcmodel=nn.Sequential(nn.Linear(16*8*8,200),\n",
     "                                    nn.BatchNorm1d(200),\n",
     "                                    nn.Sigmoid(),\n",
-    "                                    nn.Linear(200,20),\n",
+    "                                    nn.Dropout(p=0.3),\n",
+    "                                    nn.Linear(200,128),\n",
     "                                    nn.Sigmoid(),\n",
-    "                                    nn.Linear(20,2)\n",
+    "                                    nn.Dropout(p=0.3),\n",
+    "                                    nn.Linear(128,23)\n",
     "                                    )\n",
     "\n",
     "    def forward(self,out):\n",
     "        out=self.convmodel(out)\n",
-    "        out=out.view(-1,16*7*7)\n",
+    "        out=out.view(-1,16*8*8)\n",
     "        out=self.fcmodel(out)\n",
     "        return out\n",
     ""
@@ -100,29 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "def accuracy(net,testloader):\n",
-    "    correct = 0\n",
-    "    total = 0\n",
+    "    correct = 0.\n",
+    "    total = 0.\n",
     "    with torch.no_grad():\n",
     "        for data in testloader:\n",
     "            cvdata, labels = data\n",
     "            outputs = net(cvdata)\n",
     "            _, predicted = torch.max(outputs.data, 1)\n",
-    "            predicted[predicted>0]=1.\n",
+    "            # predicted[predicted>0]=1.\n",
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "\n",
     "    #print(\"correct:%d  total:%d\" %(correct,total))\n",
-    "    print('Accuracy: %d %%' % (100 * correct / total))"
+    "    print('Accuracy: %6f %%' % (100 * correct / total))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,19 +128,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 138,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[1,   200] ava_loss: 0.25556\n[1,   400] ava_loss: 0.14957\n[1,   600] ava_loss: 0.13247\n[1,   800] ava_loss: 0.09738\n[1,  1000] ava_loss: 0.09551\n[1,  1200] ava_loss: 0.08646\nAccuracy: 77 %\n[2,   200] ava_loss: 0.10152\n[2,   400] ava_loss: 0.08627\n[2,   600] ava_loss: 0.05362\n[2,   800] ava_loss: 0.05430\n[2,  1000] ava_loss: 0.07013\n[2,  1200] ava_loss: 0.06109\nAccuracy: 78 %\n[3,   200] ava_loss: 0.06241\n[3,   400] ava_loss: 0.04467\n[3,   600] ava_loss: 0.04927\n[3,   800] ava_loss: 0.03949\n[3,  1000] ava_loss: 0.04580\n[3,  1200] ava_loss: 0.04348\nAccuracy: 81 %\n[4,   200] ava_loss: 0.05800\n[4,   400] ava_loss: 0.03959\n[4,   600] ava_loss: 0.03232\n[4,   800] ava_loss: 0.02916\n[4,  1000] ava_loss: 0.03384\n[4,  1200] ava_loss: 0.03019\nAccuracy: 81 %\nFinished Training\n"
+     "text": "[1,   200] ava_loss: 0.17079\nAccuracy: 98.329364 %\n[1,   400] ava_loss: 0.05484\nAccuracy: 98.781434 %\n[1,   600] ava_loss: 0.05643\nAccuracy: 98.128294 %\n[1,   800] ava_loss: 0.04382\nAccuracy: 99.055375 %\n[2,   200] ava_loss: 0.04129\nAccuracy: 99.197069 %\n[2,   400] ava_loss: 0.02739\nAccuracy: 99.430526 %\n[2,   600] ava_loss: 0.02885\nAccuracy: 99.280736 %\n[2,   800] ava_loss: 0.02074\nAccuracy: 99.538483 %\nFinished Training\n"
     }
    ],
    "source": [
     "running_loss = 0.0\n",
     "mini_batches_count=200\n",
-    "for epoch in range(4):  # loop over the dataset multiple times\n",
+    "for epoch in range(2):  # loop over the dataset multiple times\n",
     "    for i, data in enumerate(trainloader, 0):\n",
     "\n",
     "        # get the inputs; data is a list of [inputs, labels]\n",
@@ -157,26 +176,24 @@
     "\n",
     "        # forward + backward + optimize\n",
     "        outputs = net(inputs)\n",
-    "        # whatur(labels)\n",
-    "        # break\n",
     "        loss = criterion(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        running_loss += loss.item()\n",
-    "        # every 1000 mini-batches...\n",
+    "        # every * mini-batches...\n",
     "        if i % mini_batches_count == (mini_batches_count-1):    \n",
     "            #scheduler.step()\n",
     "            print(\"[%d,%6d] ava_loss: %.5f\"%(epoch+1,i+1,running_loss/mini_batches_count))    \n",
+    "            accuracy(net,testloader)\n",
     "            running_loss = 0.0\n",
     "\n",
-    "    accuracy(net,testloader)\n",
     "print('Finished Training')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +212,7 @@
       "text/plain": "<All keys matched successfully>"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 140
     }
    ],
    "source": [
@@ -205,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 141,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -244,18 +261,18 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "total:9711,correct:9408\nAccuracy: 96.8798 %\ntotal:12833,correct:8992\nAccuracy: 70.0694 %\n"
+     "text": "total:692,correct:691\nAccuracy: 99.8555 %\ntotal:7,correct:0\nAccuracy: 0.0000 %\ntotal:1,correct:0\nAccuracy: 0.0000 %\ntotal:18,correct:0\nAccuracy: 0.0000 %\ntotal:2,correct:0\nAccuracy: 0.0000 %\ntotal:369,correct:279\nAccuracy: 75.6098 %\ntotal:5,correct:0\nAccuracy: 0.0000 %\ntotal:4,correct:0\nAccuracy: 0.0000 %\ntotal:0,correct:0\nAccuracy:\ntotal:32141,correct:32104\nAccuracy: 99.8849 %\ntotal:75,correct:0\nAccuracy: 0.0000 %\ntotal:29294,correct:29177\nAccuracy: 99.6006 %\ntotal:1,correct:0\nAccuracy: 0.0000 %\ntotal:2,correct:0\nAccuracy: 0.0000 %\ntotal:90,correct:43\nAccuracy: 47.7778 %\ntotal:326,correct:274\nAccuracy: 84.0491 %\ntotal:3,correct:0\nAccuracy: 0.0000 %\ntotal:473,correct:382\nAccuracy: 80.7611 %\ntotal:84083,correct:84075\nAccuracy: 99.9905 %\ntotal:0,correct:0\nAccuracy:\ntotal:281,correct:267\nAccuracy: 95.0178 %\ntotal:335,correct:270\nAccuracy: 80.5970 %\ntotal:5,correct:0\nAccuracy: 0.0000 %\n"
     }
    ],
    "source": [
-    "class_correct = list(0 for i in range(2))\n",
-    "class_total = list(0 for i in range(2))\n",
+    "class_correct = list(0 for i in range(23))\n",
+    "class_total = list(0 for i in range(23))\n",
     "with torch.no_grad():\n",
     "    for data in testloader:\n",
     "        images, labels = data\n",
     "        outputs = net(images)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
-    "        predicted[predicted>0]=1\n",
+    "        # predicted[predicted>0]=1\n",
     "        c = (predicted == labels).squeeze()\n",
     "        for i in range(len(labels)):\n",
     "            label = labels[i]\n",
@@ -263,9 +280,12 @@
     "            class_total[label] += 1\n",
     "\n",
     "\n",
-    "for i in range(2):\n",
+    "for i in range(23):\n",
     "    print('total:%d,correct:%d' %(class_total[i],class_correct[i]))\n",
-    "    print('Accuracy: %.4f %%' % (100 * class_correct[i] / class_total[i]))"
+    "    if class_total[i]!=0:\n",
+    "        print('Accuracy: %.4f %%' % (100 * class_correct[i] / class_total[i]))\n",
+    "    else:\n",
+    "        print('Accuracy:')"
    ]
   },
   {
